--- a/style.css
+++ b/style.css
@@ -5,9 +5,12 @@ main{
     display: flex;
 }
 .block{
-    width: 50%;
+    width: 100%;
     border: 1px dotted black;
     height: 600px;
+}
+.right {
+    display: none;
 }
 .left {
     display: flex;
