--- a/style.css
+++ b/style.css
@@ -16,7 +16,16 @@ main{
     flex-direction: column;
 }
 .right {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
+}
+.form-edit{
+    display: none;
+}
+.active {
+    display: block;
+}
+.inactive{
+    display: none;
 }
